--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
-      background-position-y: 60%;
+      background-attachment: fixed;
       background-position-x: center;
       
     
     
      
     }
-
+#phone {
+    display: none;
+}
 
 
 #contain {
@@ -28,6 +30,67 @@ body {
     border-style: solid;
     border-width: 10px 10px 10px 10px;
     border-radius: 20px;
-    font-family: 'Baloo Tammudu', cursive;
+    font-family: 'Baloo Tammudu', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     opacity: .80;
+}
+
+#pic {
+
+    border-radius: 10px;
+    opacity: 1;
+    
+
+}
+@media screen and (max-width: 640px) {
+
+body {  background-attachment: fixed;
+    
+
+
+}
+#scoring { width: 50%;
+    line-height: 1;
+}
+
+#contain {
+    margin-left: 5%;
+    margin-right: 5%;
+
+}
+#instructions { width: 50%;
+    
+
+}
+#row1 { 
+   
+    margin-right: 0px;
+    margin-left: 0px;
+}
+#crystal1 {
+   width: 25%;
+   padding: 1%;
+  
+}
+#crystal2 {
+    width: 25%;
+    padding: 1%;
+}
+#crystal3 { width: 25%;
+  
+    padding: 1%;
+}
+#crystal4 { 
+    width: 25%;
+    padding: 1%;
+  
+
+
+}
+
+#pic {
+    width: 100%;
+ 
+
+}
+
 }
