--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     border-style: solid;
     border-width: 10px 10px 10px 10px;
     border-radius: 20px;
-    font-family: 'Baloo Tammudu', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     opacity: .80;
 }
 
