--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     border-style: solid;
     border-width: 10px 10px 10px 10px;
     border-radius: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:  sans-serif;
     opacity: .80;
 }
 
@@ -38,16 +38,13 @@ body {
 
     border-radius: 10px;
     opacity: 1;
-    
-
-}
+    }
 @media screen and (max-width: 640px) {
 
 body {  background-attachment: fixed;
     
-
-
 }
+
 #scoring { width: 50%;
     line-height: 1;
 }
@@ -55,12 +52,11 @@ body {  background-attachment: fixed;
 #contain {
     margin-left: 5%;
     margin-right: 5%;
-
 }
 #instructions { width: 50%;
     
-
 }
+
 #row1 { 
    
     margin-right: 0px;
@@ -82,15 +78,10 @@ body {  background-attachment: fixed;
 #crystal4 { 
     width: 25%;
     padding: 1%;
-  
-
-
-}
+  }
 
 #pic {
     width: 100%;
- 
-
-}
+ }
 
 }
