--- a/style.css
+++ b/style.css
@@ -24,18 +24,20 @@ body {
 }
 .jumbotron {
     padding-top: 5%;
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
     height: auto;
     border-style: solid;
     border-width: 10px 10px 10px 10px;
     border-radius: 20px;
     font-family:  sans-serif;
-    opacity: .80;
+    opacity: .8;
 }
 
 #pic {
-
+    border-style: solid;
+    border-color: #212529;
+    border-width: 7px;
     border-radius: 10px;
     opacity: 1;
     }
@@ -65,6 +67,7 @@ body {  background-attachment: fixed;
 #crystal1 {
    width: 25%;
    padding: 1%;
+   
   
 }
 #crystal2 {
